[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoku-numba"
version = "0.1.0"
description = "Sudoku solver using Python + Numba"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Codex Demo"}
]
dependencies = [
  "numpy>=1.23",
  "numba>=0.57"
]

[project.scripts]
solve-sudoku = "sudoku_solver.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
